Fix bg color not always being visible

--- a/sources/stylesheets/_general.scss
+++ b/sources/stylesheets/_general.scss
@@ -66,6 +66,7 @@ body {
 .body-bg_color {
   position: fixed;
   z-index: -2;
+  height: 100vh;
 
   .container & {
     position: static;
